# ssvc_ore_miner

./: .env.test  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
rapticoressvc/: .env.test  __init__.py  data_vulnerability.csv  epss_helper.py  helpers.py  initialize.py  kevc_helper.py  lambda_get_ssvc_recommendation.py  lambda_update_nvd.py  multi_threading_helper.py  nvd_data_helper.py  priority-options_v2.csv  risk_language_helper.py  ssvc_impact_options.csv  ssvc_ore.py  ssvc_utility_options.csv  svcc_constants.py  svcc_helper.py  vector_calculator_helpers.py
rapticoressvc/docs/: conf.py
rapticoressvc/storage_helpers/: files_helper.py  s3_helper.py
rapticoressvc/test/: kevc_cisa_data.json  kevc_cves_data.json  kevc_helper_test.py  nvd_data_helper_test.py  nvd_sample_data.json  s3_helper_test.py  sample_vulnerabilities_cve_nvd_data.json  sample_vulnerabilities_data.csv  sample_vulnerabilities_ssvc_recommendations.xlsx  ssvc_ore_test.py  test_data_helper.py  testing_helper.py
scripts/: run-tests.sh
src/: __init__.py  helpers.py  ssvc_ore.py  svcc_helper.py  vector_calculator_helpers.py
src/data/csvs/: data_vulnerability.csv  ssvc_impact_options.csv
src/docs/: conf.py
